<resources>
    <string name="app_name">Minha Atividade</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="button">Entrar</string>
    <string name="msgError">Não autenticado</string>
    <string name="about">Sobre</string>
    <string name="aboutTitle">Somos um app em busca de um Recife mais saudável. Mostramos Lugares para praticar exercícios no Recife</string>
    <string name="intro">Olá meu amig@ </string>
    <string name="cadastro">Cadastro de lugares para se exercitar</string>
    <string name="nome_do_local">nome do local</string>
    <string name="bairro">bairro</string>
    <string name="descrição">descrição</string>
    <string name="botao_cadastro">enviar</string>
    <string name="botao_lugares">lugares</string>
</resources>